* Mon Nov 8 7:20:00 CEST 1998  Antonio Larrosa <larrosa@kde.org>

Restore latest complete configuration and window position on start (not
 only on sm)
Made pixmap draw mode the default

* Thu Oct 29 7:12:00 CEST 1998  Antonio Larrosa <larrosa@kde.org>

Now kpager handles changes of number of desktops and desktop names 
Fixed a small bug with centred backgrounds
Made kpager more robust

* Sun Oct 25 9:17:00 CEST 1998  Antonio Larrosa <larrosa@kde.org>

Arrows dissapear when not needed now
A new 2-row mode for people used to the traditional kpanel arrangement of desktops

* Fri Oct 16 7:15:00 CEST 1998  Antonio Larrosa <larrosa@kde.org>

Fixed a memory leackage bug 
Improved support for iconified windows ;)
(both reported by W.L. IJzerman)

* Wed Oct  7 7:45:00 CEST 1998  Antonio Larrosa <larrosa@kde.org>

Improved dnd
Removed a small bug

* Fri Oct  2 7:45:00 CEST 1998  Antonio Larrosa <larrosa@kde.org>

Added locales
Added kaccel support
Added session management

* Wed Sep 30 7:42:00 CEST 1998  Antonio Larrosa <larrosa@kde.org>

Added pixmap draw mode - It's AMAZING !
Added a test for Qt 1.41 to disable xdnd if there's an older version
 ( but kpager is not kpager withouth xdnd :( )
Removed some bugs

* Mon Sep 28 9:12:00 CEST 1998  Antonio Larrosa <larrosa@kde.org>

I forgot to add jpeginc.h

* Mon Sep 28 7:40:00 CEST 1998  Antonio Larrosa <larrosa@kde.org>

Increased painting speed and removed flickering by adding a buffer
Added icon draw mode
Added pattern backgrounds support
Improved colors usage (using QColorGroup)
Respond to kbgndwm commands (for configuration changes)
Other small changes

* Sun Sep 27 10:03:00 CEST 1998  Antonio Larrosa <larrosa@kde.org>

Initial public release
